@@ -103,6 +103,7 @@ All (GUI):
 - XRC handler for wxAuiToolBar added (Kinaou Hervé, David Hart).
 - Improve wxLIST_AUTOSIZE_XXX support in generic wxListCtrl (Kinaou Hervé).
 - Support "color", "size" and "font" CSS for fonts in wxHTML (Kinaou Hervé).
+- Fix one pixel gaps between consecutive underlined words in wxHTML.
 - Add wxCursor::GetHotSpot().
 - Add wxFD_NO_FOLLOW style for wxFileDialog (Luca Bacci).
 - Add support for embedding bitmaps in generated SVG in wxSVGFileDC (iwbnwif).
